# wakewordprod

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  D2_STREAMING.md  DATASET_CARD.md  DEVICE_RUNBOOK.md  GAP_ANALYSIS.md  HEYM_FA_REDUCTION.md  HEYM_RESULTS.md  IMPLEMENTATION_BACKLOG.md  LIBRISPEECH_VALIDATION.md  LICENSE  MODEL_CARD.md  MULTILINGUAL_PLAN.md  NOTICE  README.md  REPORT.md  REPORT_v1.md  ROBUSTNESS_IMPROVEMENTS.md  SAAS.md  SPEAKER_VERIFICATION_PLAN.md  TIER_D_COMPLETE.md  TIER_D_PLAN.md  TRAINING.md  build.gradle.kts  config.yaml  evaluate.py  gradle.properties  model_comparison.md  sbom.json  serve_train.py  settings.gradle.kts  train.py
.github/workflows/: ci.yml  package.yml
apps/android/: build.gradle.kts
apps/android/src/main/: AndroidManifest.xml
apps/android/src/main/assets/models/: README.md  heym.pte  heym.tflite  labels.json
apps/android/src/main/kotlin/com/getnyx/aura/app/: MainActivity.kt
benchmarks/corpus/positive/: marvin_clean_en_us_001.json
benchmarks/dashboards/: bench_report.md  bench_results.csv  calibration_report.md  d5_backends.md  device_metrics.md  heym_qat_report.md  heym_report.md  quant_report.md  streaming_bench.md
benchmarks/harness/: bench_kws.py
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: aura.android.application.gradle.kts  aura.android.library.gradle.kts
cmake/: AuraDepLint.cmake
cmake/toolchains/: android.cmake
core/audio/: AudioPipeline.cpp  AudioPipeline.h  IAudioPipeline.h  PcmFrame.h  Resampler.h
core/audio/tests/: audio_test.cpp
core/common/: aligned_alloc.h  audio_types.h  error.h  ids.h  lockorder.cpp  lockorder.h  log.h  noalloc.cpp  noalloc.h  result.h  ring_buffer.h  tensor.h
core/common/tests/: common_test.cpp  lockorder_test.cpp
core/config/: Config.h  ConfigProvider.h  DefaultConfigProvider.h  IConfigProvider.h  calibration_sidecar.cpp  calibration_sidecar.h
core/config/tests/: calibration_sidecar_test.cpp  config_test.cpp
core/detect/: Stage1Detector.cpp  Stage1Detector.h  StreamingDetector.cpp  StreamingDetector.h
core/detect/tests/: detect_test.cpp  streaming_detector_test.cpp
core/dsp/: DspChain.cpp  DspChain.h  IDspStage.h
core/dsp/tests/: dsp_test.cpp
core/engine/: EngineTypes.h  IWakeWordEngine.h  WakeWordEngine.cpp  WakeWordEngine.h
core/features/: FeatureFrame.h  Fft.h  LogMelExtractor.cpp  LogMelExtractor.h
core/features/tests/: features_test.cpp
core/model/: IModelLoader.h  ModelManager.cpp  ModelManager.h
core/model/tests/: model_test.cpp
core/platform/: IAudioInput.h  IClock.h  IPlatform.h  IPowerManager.h  IStorage.h
core/platform/android/: AndroidClock.h  AndroidLog.h  AndroidPlatform.h  AndroidPowerManager.h  AndroidStorage.cpp  AndroidStorage.h  OboeAudioInput.cpp  OboeAudioInput.h
core/runtime/: IInferenceBackend.h  OnnxRuntimeBackend.cpp  OnnxRuntimeBackend.h  StreamingWindow.h  TfliteMicroBackend.cpp  TfliteMicroBackend.h
core/runtime/tests/: streaming_window_test.cpp
core/scheduler/: Scheduler.cpp  Scheduler.h
core/statemachine/: IStateMachine.h
core/statemachine/tests/: statemachine_test.cpp
core/vad/: EnergyVad.h  IVad.h  SileroVad.cpp  SileroVad.h  VadGate.h
core/vad/tests/: vad_test.cpp
docs/: DATASET_CARD.md  DEVICE_RUNBOOK.md  MODEL_CARD.md  REPORT.md
docs/design/: aura_addendum_v4.md  aura_calibration_report.md  aura_expert_panel_review.md  aura_final_gap_analysis.md  aura_production_architecture_review.md  aura_sas.md  aura_stage8_ops.md
docs/design/adr/: ADR-Calibration.md
gradle/: libs.versions.toml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
product/: aura_investment_committee_report.md  aura_phase1_audit.md  aura_research_report.md  aura_stage9_handbook.md
sdk/kotlin/aura-core-bindings/: build.gradle.kts
sdk/kotlin/aura-core-bindings/src/main/: AndroidManifest.xml
sdk/kotlin/aura-core-bindings/src/main/cpp/: aura_jni.cpp
sdk/kotlin/aura-core-bindings/src/main/kotlin/com/getnyx/aura/bindings/: NativeBindings.kt
sdk/kotlin/aura-sdk/: build.gradle.kts
sdk/kotlin/aura-sdk/src/main/: AndroidManifest.xml
sdk/kotlin/aura-sdk/src/main/kotlin/com/getnyx/aura/sdk/: AuraEngine.kt  DetectionEvent.kt
tests/fuzz/: fuzz_frontend.cpp  fuzz_test.cpp
tests/golden/: golden_cascade_test.cpp
tests/integration/: integration_test.cpp
tests/mock_platform/: MockPlatform.h
tests/stress/: soak_test.cpp
tests/support/: FakeInferenceBackend.h  SyntheticSpeech.h  WavIo.h  microgtest_main.cpp  test_framework.h
tools/: aura_augment.py  aura_data.py  aura_frontend.py  aura_train.py  aura_verify_onnx.py  bundle.py  calibrate.py  calibration_consistency.py  convert_kws_model.py  convert_to_tflite.md  device_measure.sh  doctor.sh  dump_frontend.cpp  gen_golden_fixture.py  gen_sbom.py  heyaura_data.py  heym_data.py  heym_eval.py  heym_qat.py  heym_train.py  kws_models.py  libri_data.py  lint_deps.py  make_worklog.py  quant_heym_int8.py  quantize_kws.py  run_asan.sh  sarvam_tts_gen.py  sc_dataset.py  select_best_model.py  streaming_bench.py  streaming_model.py  streaming_train.py  train_kws_model.py  verify_frontend_alignment.py  verify_kws_host.py  versions.txt
tools/experimental/: heym_qat_regen_report.py  libri_extract.py  libri_train.py
tools/libri/: build_dataset.py  build_dataset_v2.py  scan_candidates.py  scan_keywords.py
wakeword_datagen/: BEST_PRACTICES.md  MIC_RECOMMENDATION.md  README.md  augment.py  gen_kokoro.py  gen_parler.py  genlib.py  phrases.json  resume.sh  run_all.py
wakeword_datagen/generators/: gen_bark.py  gen_espeak.py  gen_gtts.py  gen_indictts.py  gen_piper.py  gen_pipergen.py  gen_sapi.py
